# switchboard

./: .env.example  .gitignore  AGENT_BENCH.md  CONTRIBUTING.md  HUMANEVAL.md  LICENSE  Makefile  README.md  RESULTS.md  models.json.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: agent_bench.py  dataset.py  run_bench.py  run_gsm8k.py  run_humaneval.py
examples/: agent_compare.py
src/switchboard/: __init__.py  cache.py  classify.py  cli.py  config.py  engine.py  gateway.py  server.py
tests/: test_core.py
tools/: validate_models.py
