[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchboard-llm"
description = "An OpenAI-compatible LLM router that saves cost without losing quality."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Archit Dwivedi" }]
keywords = ["llm", "router", "openai", "anthropic", "gemini", "mixture-of-agents", "frugalgpt", "cost", "gateway"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
switchboard = "switchboard.cli:main"

[project.urls]
Homepage = "https://github.com/archit0/switchboard"
Repository = "https://github.com/archit0/switchboard"
Issues = "https://github.com/archit0/switchboard/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.hatch.version]
path = "src/switchboard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/switchboard"]

[tool.hatch.build.targets.sdist]
include = ["src/switchboard", "README.md", "RESULTS.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests", "bench", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4"]
ignore = [
  "E501",  # long lines (lots of explanatory comments / prompts)
  "B008",  # function calls in argument defaults (FastAPI-style)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
